# binproto

./: .clang-format  CMakeLists.txt  README.md
include/binproto/: BufferReader.h  BufferWriter.h  Concepts.h  EndianUtils.h  Message.h  Utils.h  Version.h
src/: BufferReader.cpp  BufferWriter.cpp  CMakeLists.txt  EndianUtils.cpp  Version.cpp
src/test/: main.cpp
